--- a/src/webapp/features/rabble/components/TurnList.module.css
+++ b/src/webapp/features/rabble/components/TurnList.module.css
@@ -3,6 +3,7 @@
   overflow-y: auto;
   box-shadow: inset -5px -40px 40px #0f0205a4;
 }
+
 .turnList {
   list-style: none;
   text-align: left;
@@ -21,7 +22,6 @@
   background-color: var(--table-bg);
   color: var(--text-primary);
   max-height: 90vh;
-  min-height: 40vh;
   overflow-y: auto;
 }
 
